Prevent the top nav from wrapping. Would rather have a more sophisticated solution

--- a/style/style.scss
+++ b/style/style.scss
@@ -471,6 +471,7 @@ a.s {
 
 .path {
     line-height: 150%;
+    white-space: nowrap;
     a {
         text-decoration: none;
         color: black;
